syntax="proto3";

package profile.service;

import "models.proto";

option go_package= "profilepb";

service Profile {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Pull(PullRequest) returns (PullResponse);
  rpc Lite(LiteRequest) returns (LiteResponse);
  rpc Lookup(LookupRequest) returns (LookupResponse);
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc UpdateBasic(UpdateBasicRequest) returns (UpdateBasicResponse);
  rpc UpdateIcon(UpdateIconRequest) returns (UpdateIconResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc UpdateBanner(UpdateBannerRequest) returns (UpdateBannerResponse);
  rpc ToggleAvailable(ToggleAvailableRequest) returns (ToggleAvailableResponse);
}

message Empty{}

message RegisterRequest{
  string UUID = 1;
  string Username = 2;
  string FirstName = 3;
  string LastName = 4;
  string School = 5;
  string DOB = 6;
}

message RegisterResponse{}

message PullRequest{
  string Username = 1;
}

message PullResponse{
  profile.models.Profile UserProfile = 1;
}

message LiteRequest{
  string UUID = 1;
}

message LiteResponse{
  string UUID = 1;
  string Username = 2;
  string FirstName = 3;
  string LastName = 4;
  string Avatar = 5;
}

message LookupRequest{
  string Username = 1;
}
  
message LookupResponse{
  bool Exists = 1;
}

message SearchRequest{
  string Query = 1;
  string Filters = 2;
  string Scroll = 3;
  //etc...
}
  
message SearchResponse{
  repeated LiteResponse Results = 1;
}

message UpdateBasicRequest{
  string UUID = 1;
  string Firstname = 2;
  string Lastname = 3;
  string Description = 4;
  string Organization = 5;
  string DOB = 6;
}

message UpdateBasicResponse{}

message UpdateIconRequest{
  string UUID = 1;
  string NewIconLink = 2;
}

message UpdateIconResponse{}

message GetRequest{
  string UUID = 1;
}

message GetResponse{
  profile.models.Profile UserProfile = 1;
}

message UpdateBannerRequest{
  string UUID = 1;
  string NewBannerLink = 2;
}

message UpdateBannerResponse{}

message ToggleAvailableRequest{
  string UUID = 1;
}

message ToggleAvailableResponse{
  bool NewValue = 1;
}